--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
         <ul>
           <li>
             <img
-              src="../images/img.jpg"
+              src="images/img.jpg"
               alt="Людина працє за комп'ютером"
               width="370"
             />
           </li>
           <li>
             <img
-              src="../images/img2.jpg"
+              src="images/img2.jpg"
               alt="Людина працює с телефоном"
               width="370"
             />
           </li>
           <li>
             <img
-              src="../images/img3.jpg"
+              src="images/img3.jpg"
               alt="Людин апрацює з планшетом"
               width="370"
             />
