--- a/index.html
+++ b/index.html
@@ -27,29 +27,30 @@
         <button type="button">Замовити послугу</button>
       </div>
       <div>
+       <h2 hidden>Наші переваги</h2>
         <ul>
           <li>
-            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h2>ПЛАНУВАННЯ</h2>
+            <h3>ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -58,12 +59,12 @@
         </ul>
       </div>
       <div>
-        <h2>Чим ми займаємося</h2>
+        <h3>Чим ми займаємося</h3>
         <ul>
           <li>
             <img
               src="./images/img.jpg"
-              alt="Людина працє за комп'ютером"
+              alt="Людина працює за комп'ютером"
               width="370"
             />
           </li>
@@ -77,7 +78,7 @@
           <li>
             <img
               src="./images/img3.jpg"
-              alt="Людин апрацює з планшетом"
+              alt="Людина працює з планшетом"
               width="370"
             />
           </li>
