--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button type="button">Замовити послугу</button>
       </div>
       <div>
-       <h2>Наші переваги</h2>
+        <h2 hidden>Наші переваги</h2>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
