--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <header>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="./index.html">WebStudio</a></li>
           <li>Студія</li>
           <li>Портфоліо</li>
           <li>Контакти</li>
