--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li>Студія</li>
-          <li>Портфоліо</li>
-          <li>Контакти</li>
+          <li><a>Студія</a></li>
+          <li><a>Портфоліо</a></li>
+          <li><a>Контакти</a></li>
         </ul>
       </nav>
       <ul>
@@ -22,15 +22,15 @@
       </ul>
     </header>
     <main>
-      <div>
+      <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
-      </div>
-      <div>
+      </section>
+      <section>
         <h2 hidden>Наші переваги</h2>
         <ul>
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3>Увага до деталей</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
@@ -57,8 +57,8 @@
             </p>
           </li>
         </ul>
-      </div>
-      <div>
+      </section>
+      <section>
         <h3>Чим ми займаємося</h3>
         <ul>
           <li>
@@ -83,10 +83,9 @@
             />
           </li>
         </ul>
-      </div>
-      <div>
+      </section>
+      <section>
         <h2>Наша команда</h2>
-        <ul>
           <li>
             <img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" />
             <h3>Ігор Дем'яненко</h3>
@@ -108,7 +107,7 @@
             <p>UI Designer</p>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
     <footer>
       <a href="/index.html">WebStudio</a>
