--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </section>
     </main>
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
         <ul>
           <li>
