--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a>Студія</a></li>
-          <li><a>Портфоліо</a></li>
-          <li><a>Контакти</a></li>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="/">Портфоліо</a></li>
+          <li><a href="/”>Контакти</a></li>
         </ul>
       </nav>
       <ul>
@@ -37,20 +37,20 @@
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3>Пунктуальність</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3>Планування</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3>Сучасні Технології</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
