--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,17 +8,17 @@
   </head>
   <body>
     <header>
+      <a href="./index.html">WebStudio</a>
       <nav>
-        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="/">Портфоліо</a></li>
-          <li><a href="/">Контакти</a></li>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        <li><a href="tel:+380961111111">+380961111111</a></li>
       </ul>
     </header>
     <main>
@@ -27,30 +27,29 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section>
-        <h2 hidden>Наші переваги</h2>
         <ul>
           <li>
-            <h3>Увага до деталей</h3>
+            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>Пунктуальність</h3>
+            <h2>ПУНКТУАЛЬНІСТЬ</h2>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>Планування</h3>
+            <h2>ПЛАНУВАННЯ</h2>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>Сучасні Технології</h3>
+            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -59,26 +58,26 @@
         </ul>
       </section>
       <section>
-        <h3>Чим ми займаємося</h3>
+        <h2>Чим ми займаємося</h2>
         <ul>
           <li>
             <img
-              src="./images/img.jpg"
-              alt="Людина працює за комп'ютером"
+              src=".images/img.jpg"
+              alt="Людина працє за комп'ютером"
               width="370"
             />
           </li>
           <li>
             <img
-              src="./images/img2.jpg"
+              src=".images/img2.jpg"
               alt="Людина працює с телефоном"
               width="370"
             />
           </li>
           <li>
             <img
-              src="./images/img3.jpg"
-              alt="Людина працює з планшетом"
+              src=".images/img3.jpg"
+              alt="Людин апрацює з планшетом"
               width="370"
             />
           </li>
@@ -86,23 +85,24 @@
       </section>
       <section>
         <h2>Наша команда</h2>
+        <ul>
           <li>
-            <img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" />
+            <img src=".images/img4.jpg" alt="Ігор Дем'яненко" width="270" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" />
+            <img src=".images/img5.jpg" alt="Ольга Рєпіна" width="270" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img6.jpg" alt="Микола Тарасов" width="270" />
+            <img src=".images/img6.jpg" alt="Микола Тарасов" width="270" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" />
+            <img src=".images/img7.jpg" alt="Михайло Єрмаков" width="270" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
@@ -122,7 +122,7 @@
             >
           </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+          <li><a href="tel:+380961111111">+380961111111</a></li>
         </ul>
       </address>
     </footer>
