--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
         <ul>
           <li>
             <img
-              src=".images/img.jpg"
+              src="./images/img1.jpg"
               alt="Людина працє за комп'ютером"
               width="370"
             />
           </li>
           <li>
             <img
-              src=".images/img2.jpg"
+              src="./images/img2.jpg"
               alt="Людина працює с телефоном"
               width="370"
             />
           </li>
           <li>
             <img
-              src=".images/img3.jpg"
+              src="./images/img3.jpg"
               alt="Людин апрацює з планшетом"
               width="370"
             />
@@ -88,22 +88,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src=".images/img4.jpg" alt="Ігор Дем'яненко" width="270" />
+            <img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src=".images/img5.jpg" alt="Ольга Рєпіна" width="270" />
+            <img src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src=".images/img6.jpg" alt="Микола Тарасов" width="270" />
+            <img src="./images/img6.jpg" alt="Микола Тарасов" width="270" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src=".images/img7.jpg" alt="Михайло Єрмаков" width="270" />
+            <img src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
