--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
@@ -64,7 +64,7 @@
           <li>
             <img
               src="./images/img1.jpg"
-              alt="Людина працє за комп'ютером"
+              alt="Людина працює за комп'ютером"
               width="370"
             />
           </li>
@@ -78,7 +78,7 @@
           <li>
             <img
               src="./images/img3.jpg"
-              alt="Людин апрацює з планшетом"
+              alt="Людина працює з планшетом"
               width="370"
             />
           </li>
@@ -88,22 +88,38 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" />
+            <img
+              src="./images/img4.jpg"
+              alt="Молодий чоловік в окулярах та в коричневій сорочці"
+              width="270"
+            />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" />
+            <img
+              src="./images/img5.jpg"
+              alt="Молода дівчина у діловому костюмі та в окулярах"
+              width="270"
+            />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img6.jpg" alt="Микола Тарасов" width="270" />
+            <img
+              src="./images/img6.jpg"
+              alt="Молодий чоловік у блакитній сорочці"
+              width="270"
+            />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" />
+            <img
+              src="./images/img7.jpg"
+              alt="Молодий чоловік у чорній футболці"
+              width="270"
+            />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
